# dedao-notebooklm

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REFACTOR_PLAN.md  batch_download.py  batch_download_classified.py  check_healing_status.sh  list_notebooks.py  notebook_manager.py  pyproject.toml  redownload.py  requirements.txt  self_healing_loop.py  start_healing.sh  upload_files.py
.github/workflows/: ci.yml
extras/: create_and_upload.py  fetch_notebooks.py
scripts/: batch_download.py  redownload.py
scripts/healing/: start_healing_bg.sh
scripts/maintenance/: batch_download.py  redownload.py  rename_folders.py  rename_md_files.py
scripts/notebooklm/: create_and_upload.py  fetch_notebooks.py  list_notebooks.py  notebook_manager.py  notebooklm_course_ppts.py  upload_files.py
skills/dedao-notebooklm/: SKILL.md
src/: __init__.py  ai_pack.py  api_service.py  cli.py  course_ppts.py  course_sync.py  data_migration.py
src/converter/: __init__.py  ebook_html_to_md.py  epub_generator.py  html_to_md.py  json_to_md.py  svg_to_md.py
src/dedao/: __init__.py  _audiobook_legacy.py  account.py  audiobook.py  auth.py  base.py  cache.py  channel.py  client.py  constants.py  dedao_dl.py  downloader.py  ebook.py  models.py  topic.py
src/dedao/audiobook/: __init__.py
src/dedao/course/: __init__.py  client.py  downloader.py
src/dedao/ebook/: __init__.py  client.py  downloader.py
src/merger/: __init__.py  article_merger.py
src/notebooklm/: __init__.py  api_client.py  browser.py  config.py  library.py  models.py
src/utils/: __init__.py  browser_utils.py  config.py  crypto.py  ffmpeg.py
tests/: __init__.md  test_ai_pack.py  test_course_sync.py  test_dedao.py  test_generated_comprehensive.py  yusysEmail.md
