[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dedao-notebooklm"
version = "0.1.0"
description = "下载得到专栏课程并上传到 Google Notebook LM"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["dedao", "notebooklm", "download", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "beautifulsoup4>=4.11.0",
    "markdown>=3.4.0",
    "PyYAML>=6.0",
    "playwright>=1.40.0",
    "patchright>=1.55.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=59.0",
    "pdfkit>=1.0.0",
]
google = [
    "google-auth>=2.0.0",
]
patchright = [
    "patchright>=1.55.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
dedao-nb = "cli:main"

[project.urls]
Homepage = "https://github.com/your-username/dedao-notebooklm"
Repository = "https://github.com/your-username/dedao-notebooklm"
Issues = "https://github.com/your-username/dedao-notebooklm/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
